完成主界面部分，待做多城市部分

--- a/app/src/main/res/layout/forecast_layout.xml
+++ b/app/src/main/res/layout/forecast_layout.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="20dp">
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+
         />
     <LinearLayout
+        android:layout_marginLeft="10dp"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:orientation="vertical"
+        android:gravity="center_vertical"
         >
         <RelativeLayout
             android:layout_width="match_parent"
@@ -22,22 +26,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="11月26日"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 />
-            <TextView
+            -<TextView
                 android:id="@+id/temp"
                 android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="6℃-11℃"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 />
             </RelativeLayout>
         <TextView
+            android:layout_marginTop="5dp"
             android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="小雨。3-4 西北风 11km/h。 降水几率100%"
+            android:textSize="10sp"
             />
         </LinearLayout>
 
