--- a/app/src/main/res/layout/multi_layout.xml
+++ b/app/src/main/res/layout/multi_layout.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add_white_48pt" />
+        android:layout_marginBottom="60dp"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:src="@drawable/ic_add_white_24dp" />
 
 </RelativeLayout>
