--- a/app/src/main/res/layout/multi_layout.xml
+++ b/app/src/main/res/layout/multi_layout.xml
@@ -2,10 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="多城市界面"
+    <ListView
+        android:id="@+id/listViewMulti"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:dividerHeight="0dp"
         />
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
